--- a/src/main/java/tienda_online/interfaz/index.html
+++ b/src/main/java/tienda_online/interfaz/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <h1>Tienda Online</h1>
+    <h1>Moxor</h1>
 </header>
 <main>
     <section id="login">
@@ -25,6 +25,6 @@
 <footer>
     <p>&copy; 2024 Tienda Online</p>
 </footer>
-<script src="script.js"></script>
+<script src="login.js"></script> <!-- Cambiado de registro.js a login.js -->
 </body>
 </html>
