--- a/src/main/java/tienda_online/interfaz/register.html
+++ b/src/main/java/tienda_online/interfaz/register.html
@@ -27,6 +27,6 @@
 <footer>
   <p>&copy; 2024 Tienda Online</p>
 </footer>
-<script src="script.js"></script>
+<script src="registro.js"></script>
 </body>
 </html>
